change integration model, control data from js microservices

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.main.banner-mode=off
-logging.level.root=WARN
+#logging.level.web=TRACE
+#logging.level.org.springframework.web=TRACE
+#logging.level.root=WARN
+
+#tempDirMacOS=echo $TMPDIR
+tempDirWin= %localappdata%\Temp
+tempDirOS=TMPDIR
+
+
+
+server.port=1980
 
 host=192.168.246.76
 port=8080
