refactoring code to new concept api for local debug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,15 @@ spring.main.banner-mode=off
 #logging.level.root=WARN
 
 #tempDirMacOS=echo $TMPDIR
-tempDirWin= %localappdata%\Temp
+
+localTempDirWin= %localappdata%\Temp
+tempDirWin=C:\Windows\Temp
 tempDirOS=TMPDIR
 
+tmpDirFolder=TMPDIR,C:\\Windows\\Temp
 
 
 server.port=1980
-
 host=192.168.246.76
 port=8080
 restServices=/sd/services/rest/
