first prod version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.banner-mode=off
 #logging.level.web=TRACE
 #logging.level.org.springframework.web=TRACE
-#logging.level.root=WARN
+logging.level.root=WARN
 
 #tempDirMacOS=echo $TMPDIR
 
@@ -15,7 +15,7 @@ tmpDirFolder=TMPDIR,C:\\Windows\\Temp
 server.port=1980
 host=192.168.246.76
 port=8080
-restServices=/sd/services/rest/
+restServices=/services/rest/
 postMethodCheckStatus=check-status
 getMethodAddFile=add-file
 accessKey=?accessKey=b2921f00-1f46-4eaf-a90c-c8633f9bf8ca
