--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,21 +4,19 @@ spring.main.banner-mode=off
 logging.level.root=WARN
 
 #tempDirMacOS=echo $TMPDIR
-
 localTempDirWin= %localappdata%\Temp
 tempDirWin=C:\Windows\Temp
 tempDirOS=TMPDIR
 
-tmpDirFolder=TMPDIR,C:\\Windows\\Temp
+tmpDirFolder=TMPDIR,C:\\Windows\\Temp\\
 
-
-server.port=1980
+#server.port=1980
 host=192.168.246.76
 port=8080
 restServices=/services/rest/
 postMethodCheckStatus=check-status
 getMethodAddFile=add-file
 accessKey=?accessKey=b2921f00-1f46-4eaf-a90c-c8633f9bf8ca
+57cb0c68-1998-481e-a4e2-fdec8afdec36
 #UUID="serviceCall$1615707"
-
 basedRestUrl=/api/v1
